test/Debug/Errors/UndefinedName.k
// written by kimio kuramitsu
a

